objects/CR_Action_Item__c.object
<CustomObject>
    <description>An assignable, completeable action item for a project or release</description>
    <fields>
        <fullName>Action_Item_Status__c</fullName>
        <label>Action Item Status</label>
        <picklist>
            <picklistValues>
                <fullName>Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Role__c</fullName>
        <label>Assigned To (Role)</label>
        <picklist>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release QA Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release Tech Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anyone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CR_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me__c</fullName>
        <formula>Assigned_To__c = $User.Id</formula>
        <inlineHelpText>True if this Action Item is assigned to the current user</inlineHelpText>
        <label>Assigned to Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <formula>IF(NOT(ISBLANK(Assigned_To__c)),Assigned_To__r.FirstName + &apos; &apos; + Assigned_To__r.LastName,
IF(NOT(ISBLANK(TEXT(Assigned_To_Role__c))), TEXT(Assigned_To_Role__c),
NULL)
)</formula>
        <inlineHelpText>Combined view of Assigned To and Assigned To (Role) for list views and reports.  An assigned person overrides an assigned role.</inlineHelpText>
        <label>Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Last4__c</fullName>
        <description>Used in name generation</description>
        <formula>RIGHT(Change_Request__r.Name ,4)</formula>
        <label>CR Last4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>SFDC_Change_Request__c</referenceTo>
        <relationshipLabel>CR Action Items</relationshipLabel>
        <relationshipName>CR_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <formula>CASE(TEXT(Action_Item_Status__c),
  &apos;Resolved&apos;,1,
  &apos;Responded&apos;,1,
  &apos;Completed&apos;,1,
  0)=1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <description>Updated by workflow when changed to a Complete status</description>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deploy_Sort_Order__c</fullName>
        <formula>CASE(TEXT(Type__c), 
&apos;Pre-Validation&apos;,&apos;1&apos;, 
&apos;Pre-Deployment&apos;,&apos;2&apos;, 
&apos;Post-Deployment&apos;,&apos;4&apos;, 
&apos;0&apos;) 
+ &apos;-&apos; + LPAD(TEXT(Order__c),10,&apos;0&apos;)</formula>
        <label>Deploy Sort Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Used in name generation</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IS_System_Modification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IS System Modification</label>
        <referenceTo>IS_System_Modification__c</referenceTo>
        <relationshipLabel>CR Action Items - Deployment Steps</relationshipLabel>
        <relationshipName>CR_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Action_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prerequisite Action Item</label>
        <referenceTo>CR_Action_Item__c</referenceTo>
        <relationshipLabel>CR Action Items</relationshipLabel>
        <relationshipName>CR_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RT__c</fullName>
        <description>Used in name generation</description>
        <formula>CASE(RecordType.Name,
  &apos;Issue&apos;,&apos;IS&apos;,
  &apos;Task&apos;,&apos;TK&apos;,
  &apos;Work Order&apos;,&apos;WO&apos;,
  &apos;Deployment Plan Step&apos;,&apos;STEP&apos;,
  &apos;AI&apos;)</formula>
        <label>RT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Number__c</fullName>
        <description>Used in name generation</description>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Related_Change_Request_Link__c</fullName>
        <description>Use this for IS Mods instead of populating the actual Change Request lookup field</description>
        <formula>IF(NOT(ISBLANK(IS_System_Modification__r.Change_Request__c)),HYPERLINK(&quot;/&quot;&amp;IS_System_Modification__r.Change_Request__c ,IS_System_Modification__r.Change_Request__r.Name),&quot;&quot;)</formula>
        <label>Related Change Request Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Change_Request__c</fullName>
        <formula>IS_System_Modification__r.Change_Request__r.Name</formula>
        <label>Related Change Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Release_Link__c</fullName>
        <description>Use this for IS Mods instead of populating the actual Release lookup field</description>
        <formula>IF(NOT(ISBLANK(IS_System_Modification__r.Change_Request__r.Release__c)),HYPERLINK(&quot;/&quot;&amp;IS_System_Modification__r.Change_Request__r.Release__c ,IS_System_Modification__r.Change_Request__r.Release__r.Name),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Release Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Release__c</fullName>
        <formula>IS_System_Modification__r.Change_Request__r.Release__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>SFDC_Release__c</referenceTo>
        <relationshipLabel>CR Action Items</relationshipLabel>
        <relationshipName>CR_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <formula>CASE(TEXT(Type__c),
  &apos;Pre-Validation&apos;,&apos;1&apos;,
  &apos;Pre-Deployment&apos;,&apos;2&apos;,
  &apos;Post-Deployment&apos;,&apos;4&apos;,
  &apos;0&apos;)
+ &apos;-&apos; + TEXT(Order__c)</formula>
        <inlineHelpText>Sort order for Deployment Plan Steps, based on Type and Order fields</inlineHelpText>
        <label>Sort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Complete_in_Alternate__c</fullName>
        <inlineHelpText>Not included in Step Completion field since this is not commonly used</inlineHelpText>
        <label>Step Complete in Alternate</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_Complete_in_Dev__c</fullName>
        <inlineHelpText>Not included in Step Completion field since this is not commonly used</inlineHelpText>
        <label>Step Complete in Dev</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_Complete_in_Production__c</fullName>
        <label>Step Complete in Production</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_Complete_in_QA__c</fullName>
        <label>Step Complete in QA</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_Complete_in_Rehearse__c</fullName>
        <label>Step Complete in Rehearse</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_Complete_in_UAT__c</fullName>
        <label>Step Complete in UAT</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_Completion__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Step_Complete_in_QA__c,&apos;N/A&apos;)),
  CASE(TEXT(Step_Complete_in_QA__c),
   &apos;Yes&apos;,IMAGE(&apos;/img/msg_icons/confirm16.png&apos;,&apos;Complete&apos;),
   &apos;No&apos;,IMAGE(&apos;/img/search_dismiss.gif&apos;,&apos;Incomplete&apos;),
   &apos;Issue&apos;,IMAGE(&apos;/img/msg_icons/error16.png&apos;,&apos;Issue&apos;),
  &apos;&apos;)
  &amp; &apos;QA&apos; + &apos; ➡ &apos;, &apos;&apos;)+
IF(NOT(ISPICKVAL(Step_Complete_in_UAT__c,&apos;N/A&apos;)),
  CASE(TEXT(Step_Complete_in_UAT__c),
   &apos;Yes&apos;,IMAGE(&apos;/img/msg_icons/confirm16.png&apos;,&apos;Complete&apos;),
   &apos;No&apos;,IMAGE(&apos;/img/search_dismiss.gif&apos;,&apos;Incomplete&apos;),
   &apos;Issue&apos;,IMAGE(&apos;/img/msg_icons/error16.png&apos;,&apos;Issue&apos;),
  &apos;&apos;) &amp; 
  &apos;UAT&apos;+ &apos; ➡ &apos;, &apos;&apos;)+
IF(NOT(ISPICKVAL(Step_Complete_in_Rehearse__c,&apos;N/A&apos;)),
  CASE(TEXT(Step_Complete_in_Rehearse__c),
   &apos;Yes&apos;,IMAGE(&apos;/img/msg_icons/confirm16.png&apos;,&apos;Complete&apos;),
   &apos;No&apos;,IMAGE(&apos;/img/search_dismiss.gif&apos;,&apos;Incomplete&apos;),
   &apos;Issue&apos;,IMAGE(&apos;/img/msg_icons/error16.png&apos;,&apos;Issue&apos;),
  &apos;&apos;) &amp;
  &apos;Rehearse&apos; &amp; &apos; ➡ &apos;, &apos;&apos;)+
IF(NOT(ISPICKVAL(Step_Complete_in_Production__c,&apos;N/A&apos;)),
  CASE(TEXT(Step_Complete_in_Production__c),
   &apos;Yes&apos;,IMAGE(&apos;/img/msg_icons/confirm16.png&apos;,&apos;Complete&apos;),
   &apos;No&apos;,IMAGE(&apos;/img/search_dismiss.gif&apos;,&apos;Incomplete&apos;),
   &apos;Issue&apos;,IMAGE(&apos;/img/msg_icons/error16.png&apos;,&apos;Issue&apos;),
  &apos;&apos;) &amp;
  &apos;Production&apos;,&apos;&apos;)</formula>
        <inlineHelpText>Combined view of Step Complete deployment fields</inlineHelpText>
        <label>Step Completion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Estimate_Mins__c</fullName>
        <label>Time Estimate (Mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <inlineHelpText>When should this step be performed in relation to other steps?</inlineHelpText>
        <label>Timing</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeCode__c</fullName>
        <formula>CASE(TEXT(Type__c),
  &apos;Pre-Validation&apos;,&apos;PreV&apos;,
  &apos;Pre-Deployment&apos;,&apos;PreD&apos;,
  &apos;Post-Deployment&apos;,&apos;PostD&apos;,
  &apos;&apos;)</formula>
        <label>TypeCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Impact__c</fullName>
        <inlineHelpText>How will this change affect users?  Example scenario - a field must be deleted before change set validation</inlineHelpText>
        <label>User Impact</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <label>CR Action Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Action_Item_Status__c</columns>
        <columns>Assignment__c</columns>
        <columns>Related_Change_Request_Link__c</columns>
        <columns>Related_Release_Link__c</columns>
        <columns>Step_Completion__c</columns>
        <columns>Deploy_Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Dep_Steps_All</fullName>
        <columns>NAME</columns>
        <columns>Action_Item_Status__c</columns>
        <columns>Assignment__c</columns>
        <columns>Related_Change_Request_Link__c</columns>
        <columns>Related_Release_Link__c</columns>
        <columns>Step_Completion__c</columns>
        <columns>Deploy_Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CR_Action_Item__c.Deployment_Plan_Step</value>
        </filters>
        <label>Dep Steps - All</label>
    </listViews>
    <listViews>
        <fullName>Dep_Steps_Change_Request_x</fullName>
        <columns>NAME</columns>
        <columns>Action_Item_Status__c</columns>
        <columns>Assignment__c</columns>
        <columns>Related_Change_Request_Link__c</columns>
        <columns>Related_Release_Link__c</columns>
        <columns>Step_Completion__c</columns>
        <columns>Deploy_Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CR_Action_Item__c.Deployment_Plan_Step</value>
        </filters>
        <filters>
            <field>Related_Change_Request__c</field>
            <operation>equals</operation>
            <value>x</value>
        </filters>
        <label>Dep Steps – Change Request x</label>
    </listViews>
    <listViews>
        <fullName>Dep_Steps_Release_SteelBrick_CPQ</fullName>
        <columns>NAME</columns>
        <columns>Action_Item_Status__c</columns>
        <columns>Assignment__c</columns>
        <columns>Related_Change_Request_Link__c</columns>
        <columns>Related_Release_Link__c</columns>
        <columns>Step_Completion__c</columns>
        <columns>Deploy_Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CR_Action_Item__c.Deployment_Plan_Step</value>
        </filters>
        <filters>
            <field>Related_Release__c</field>
            <operation>equals</operation>
            <value>CPQ: Steelbrick Installation Wave 1 Release</value>
        </filters>
        <label>Dep Steps – Release - SteelBrick CPQ</label>
    </listViews>
    <listViews>
        <fullName>Dep_Steps_Release_x</fullName>
        <columns>NAME</columns>
        <columns>Action_Item_Status__c</columns>
        <columns>Assignment__c</columns>
        <columns>Related_Change_Request_Link__c</columns>
        <columns>Related_Release_Link__c</columns>
        <columns>Step_Completion__c</columns>
        <columns>Deploy_Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CR_Action_Item__c.Deployment_Plan_Step</value>
        </filters>
        <filters>
            <field>Related_Release__c</field>
            <operation>equals</operation>
            <value>x</value>
        </filters>
        <label>Dep Steps – Release x</label>
    </listViews>
    <listViews>
        <fullName>My_Action_Items_Completed</fullName>
        <columns>NAME</columns>
        <columns>Action_Item_Status__c</columns>
        <columns>Assignment__c</columns>
        <columns>Related_Change_Request_Link__c</columns>
        <columns>Related_Release_Link__c</columns>
        <columns>Step_Completion__c</columns>
        <columns>Deploy_Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Complete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Action Items - Completed</label>
    </listViews>
    <listViews>
        <fullName>My_Action_Items_Open</fullName>
        <columns>Order__c</columns>
        <columns>Sort__c</columns>
        <columns>Timing__c</columns>
        <columns>NAME</columns>
        <columns>Related_Change_Request_Link__c</columns>
        <columns>Action_Item_Status__c</columns>
        <columns>Assignment__c</columns>
        <columns>Related_Release_Link__c</columns>
        <columns>Step_Completion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Step_Complete_in_Production__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>Related_Release__c</field>
            <operation>equals</operation>
            <value>Release 53: October 2016</value>
        </filters>
        <label>My Action Items - Open</label>
    </listViews>
    <nameField>
        <displayFormat>CRA-{000000}</displayFormat>
        <label>CR Action Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CR Action Items</pluralLabel>
    <recordTypes>
        <fullName>Deployment_Plan_Step</fullName>
        <active>true</active>
        <description>A step related to an IS Mod that is performed during a deployment</description>
        <label>Deployment Plan Step</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Check_the_Env_is_correct_when_marked_com</fullName>
        <active>true</active>
        <description>When marked complete in Env, check if parent (Pre-Req) record is marked complete for same Env</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Prerequisite_Action_Item__c)),
OR(
ISPICKVAL(Step_Complete_in_Alternate__c, &quot;Yes&quot;),
ISPICKVAL(Step_Complete_in_Dev__c, &quot;Yes&quot;),
ISPICKVAL(Step_Complete_in_Production__c, &quot;Yes&quot;),
ISPICKVAL(Step_Complete_in_QA__c, &quot;Yes&quot;),
ISPICKVAL(Step_Complete_in_Rehearse__c, &quot;Yes&quot;),
ISPICKVAL(Step_Complete_in_UAT__c, &quot;Yes&quot;)),
OR(
TEXT(Step_Complete_in_Alternate__c) !=  TEXT(Prerequisite_Action_Item__r.Step_Complete_in_Alternate__c), 
TEXT(Step_Complete_in_Dev__c) !=  TEXT(Prerequisite_Action_Item__r.Step_Complete_in_Dev__c),
TEXT(Step_Complete_in_Production__c) !=  TEXT(Prerequisite_Action_Item__r.Step_Complete_in_Production__c),
TEXT(Step_Complete_in_QA__c) !=  TEXT(Prerequisite_Action_Item__r.Step_Complete_in_QA__c),
TEXT(Step_Complete_in_Rehearse__c) !=  TEXT(Prerequisite_Action_Item__r.Step_Complete_in_Rehearse__c),
TEXT(Step_Complete_in_UAT__c) !=  TEXT(Prerequisite_Action_Item__r.Step_Complete_in_UAT__c))
)</errorConditionFormula>
        <errorMessage>If the Step is marked as Complete then any Prerequisite step should be marked as complete as well in the necessary Environments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Depl_Plan_Step_Not_Complete_Until_Prod</fullName>
        <active>true</active>
        <description>A Deployment Plan Step Action Item cannot be marked as Complete unless it has been marked as completed in Production</description>
        <errorConditionFormula>AND(Complete__c, TEXT(Step_Complete_in_Production__c)=&apos;No&apos;)</errorConditionFormula>
        <errorMessage>This Deployment Plan Step can only be marked as Completed once the step has been marked as Complete in Production</errorMessage>
    </validationRules>
</CustomObject>